--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       lang="en"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="https://www.thymeleaf.org">
 <link rel="stylesheet" type="text/css" href="webjars/bootstrap/4.3.1/css/bootstrap.min.css">
 <script src="webjars/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
 <script src="webjars/bootstrap/4.3.1/js/bootstrap.min.js" type="text/javascript"></script>
 <head>
   <meta charset="UTF-8">
-  <title>Products</title>
+  <title>Albums</title>
 </head>
 <body style="font-family: Inter, sans-serif">
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -25,18 +26,18 @@
       </a>
       <div class="dropdown-menu">
         <a class="dropdown-item" th:href="@{albumsList}">Albums List</a>
-        <a class="dropdown-item" th:href="@{showCreate}">Add Album</a>
+        <a sec:authorize="hasAnyRole('ADMIN', 'AGENT')" class="dropdown-item" th:href="@{showCreate}">Add Album</a>
       </div>
     </li>
   </ul>
-  <ul class="navbar-nav ml-auto">
+  <ul class="navbar-nav ml-auto mr-3">
     <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-        [Username]
+      <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
+        [Pabloman47]
       </a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Login</a>
-        <a class="dropdown-item" href="#">Logout</a>
+        <a sec:authorize="!isAuthenticated()" class="dropdown-item" href="#">Login</a>
+        <a sec:authorize="isAuthenticated()" class="dropdown-item" th:href="@{/logout}">Logout</a>
         <a class="dropdown-item" href="#">Profile</a>
       </div>
     </li>
